--- a/src/demo-app/app/test.component.html
+++ b/src/demo-app/app/test.component.html
@@ -1,6 +1,6 @@
-<grid-layout>
-    <row-layout [horizontalAlignment]="'center'" [separation]="'between'" [switchSize]="'small'">
+<gridLayout>
+    <rowLayout [horizontalAlignment]="'center'" [separation]="'between'" [switchSize]="'small'">
         <div class="testBox"></div>
         <div class="testBox"></div>
-    </row-layout>
-</grid-layout>
+    </rowLayout>
+</gridLayout>
