Cambios en aplicación demo y estilos de librería * Se realizan cambios cosméticos en aplicación demo y se agrega Font Awesome junto con Bootstrap a la misma * Se renombran clases css en librería por presentar conflictos con framework de bootstrap

--- a/src/demo-app/app/app.component.css
+++ b/src/demo-app/app/app.component.css
@@ -1,7 +1,6 @@
-.testBox {
-    height: 50px;
-    width: 50px;
-    background-color: red;
+header{
+    color: #7FBFFF;
+    background-color: #001f3f;
 }
 
 .middle-align{
