--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -1,28 +1,49 @@
 <layout>
   <gridLayout>
-    <header rowLayout [height]="'auto'">
-      Demo App
+    <header rowLayout [height]="'auto'" [verticalAlignment]="'center'">
+      <h3>
+        <i class="fa fa-desktop" aria-hidden="true"></i>
+        Demo App</h3>
     </header>
-    <rowLayout [switchSize]="'small'" style="background-color: yellow; height: 100%">
-      <div columnLayout class="middle-align" [separation]="'all'" [width]="{extraSmall: 'none', small: '50%', medium: '30%'}">
-      </div>
-      <columnLayout>
-        <!--<div class="testBox"></div>-->
-        <section style="overflow-y: auto; width: 100%; height: 100%;">
-        </section>
-      </columnLayout>
-      <!--<column-layout><div class="testBox"></div></column-layout>-->
-      <columnLayout *minSize="'small'" [verticalAlignment]="'center'" [width]="{small: 'auto', medium: '30%'}">
-        <input type="text"/>
-        <div class="testBox"></div>
-      </columnLayout>
+    <rowLayout [switchSize]="'small'" style="height: 100%">
+      <nav columnLayout [horizontalAlignment]="'center'" [switchSize]="'small'" [width]="'auto'">
+        <a class="menu-item" href="#">
+          <i class="fa fa-home" aria-hidden="true"></i>
+          Home</a>
+        <a  class="menu-item" href="#">
+          <i class="fa fa-linux" aria-hidden="true"></i>
+          Page 1 </a>
+        <a  class="menu-item" href="#">
+          <i class="fa fa-windows" aria-hidden="true"></i>
+          Page 2 </a>
+        <a  class="menu-item" href="#">
+          <i class="fa fa-apple" aria-hidden="true"></i>
+          Page 3 </a>
+        <a  class="menu-item" href="#">
+          <i class="fa fa-google" aria-hidden="true"></i>
+          Page 4 </a>
+      </nav>
+      <main columnLayout>
+        <div class="panel panel-default main-panel">
+          <div class="panel-body">
+            Main Content
+          </div>
+        </div>
+      </main>
+      <aside columnLayout *minSize="'small'" [switchSize]="'small'"  [width]="'20%'">
+        <div class="banner"></div>
+        <div class="banner"></div>
+      </aside>
     </rowLayout>
-    <rowLayout style="background-color: black" [height]="'15%'">
-      <rowLayout>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-      </rowLayout>
-    </rowLayout>
+    <footer rowLayout style="background-color: black" [height]="'10%'">
+      <columnLayout [horizontalAlignment]="'center'">
+        <rowLayout [verticalAlignment]="'center'" [horizontalAlignment]="'center'">
+          <i class="fa fa-facebook fa-2x social-icon" aria-hidden="true"></i>
+          <i class="fa fa-twitter fa-2x social-icon" aria-hidden="true"></i>
+          <i class="fa fa-instagram fa-2x social-icon" aria-hidden="true"></i>
+        </rowLayout>
+        <p class="copyright-text">Copyright © 2016 Ng2-Flex Demo</p>
+      </columnLayout>
+    </footer>
   </gridLayout>
 </layout>
