Se renombra directiva de clases y se corrigen bugs varios

--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -30,7 +30,7 @@
           </div>
         </div>
       </main>
-      <aside columnLayout *minSize="'small'" [switchSize]="'small'"  [width]="'20%'">
+      <aside columnLayout *minSize="'small'" [sizeClass]="{medium: 'aside-max-size', large: 'aside-max-size'}" [switchSize]="'small'"  [width]="'20%'">
         <div class="banner"></div>
         <div class="banner"></div>
       </aside>
