Se reorganiza librería * Se renombran componentes de librería con prefijo flx * Se agrega nueva clase flexElement que centraliza el comportamiento de los elementos de la librería * Se reacomodan directivas en nuevas carpetas que agrupan las directivas por tipo * Se ajusta aplicación demo a cambios hechos en la librería

--- a/src/demo-app/app/test.component.html
+++ b/src/demo-app/app/test.component.html
@@ -1,6 +1,6 @@
-<gridLayout>
-    <rowLayout [horizontalAlignment]="'center'" [separation]="'between'" [switchSize]="'small'">
+<flxGrid>
+    <flxRow [horizontalAlignment]="'center'" [separation]="'between'" [switchSize]="'small'">
         <div class="testBox"></div>
         <div class="testBox"></div>
-    </rowLayout>
-</gridLayout>
+    </flxRow>
+</flxGrid>
