--- a/src/demo-app/app/app.component.html
+++ b/src/demo-app/app/app.component.html
@@ -1,12 +1,12 @@
-<layout>
-  <gridLayout>
-    <header rowLayout [height]="'auto'" [verticalAlignment]="'center'">
+<flxContainer>
+  <flxGrid>
+    <header flxRow [height]="'auto'" [verticalAlignment]="'center'">
       <h3>
         <i class="fa fa-desktop" aria-hidden="true"></i>
         Demo App</h3>
     </header>
-    <rowLayout [switchSize]="'small'" style="height: 100%">
-      <nav columnLayout [horizontalAlignment]="'center'" [switchSize]="'small'" [width]="'auto'">
+    <flxRow [switchSize]="'small'" style="height: 100%">
+      <nav flxColumn [horizontalAlignment]="'center'" [switchSize]="'small'" [width]="'auto'">
         <a class="menu-item" href="#">
           <i class="fa fa-home" aria-hidden="true"></i>
           Home</a>
@@ -23,27 +23,28 @@
           <i class="fa fa-google" aria-hidden="true"></i>
           Page 4 </a>
       </nav>
-      <main columnLayout>
+      <main flxColumn>
         <div class="panel panel-default main-panel">
           <div class="panel-body">
             Main Content
           </div>
         </div>
       </main>
-      <aside columnLayout *minSize="'small'" [sizeClass]="{medium: 'aside-max-size', large: 'aside-max-size'}" [switchSize]="'small'"  [width]="'20%'">
+      <!--*flxMinSize="'small'"-->
+      <aside flxColumn  [flxClass]="{medium: 'aside-max-size', large: 'aside-max-size'}" [switchSize]="'small'"  [width]="'20%'">
         <div class="banner"></div>
         <div class="banner"></div>
       </aside>
-    </rowLayout>
-    <footer rowLayout style="background-color: black" [height]="'10%'">
-      <columnLayout [horizontalAlignment]="'center'">
-        <rowLayout [verticalAlignment]="'center'" [horizontalAlignment]="'center'">
+    </flxRow>
+    <footer flxRow style="background-color: black" [height]="'10%'">
+      <flxColumn [horizontalAlignment]="'center'">
+        <flxRow [verticalAlignment]="'center'" [horizontalAlignment]="'center'">
           <i class="fa fa-facebook fa-2x social-icon" aria-hidden="true"></i>
           <i class="fa fa-twitter fa-2x social-icon" aria-hidden="true"></i>
           <i class="fa fa-instagram fa-2x social-icon" aria-hidden="true"></i>
-        </rowLayout>
+        </flxRow>
         <p class="copyright-text">Copyright © 2016 Ng2-Flex Demo</p>
-      </columnLayout>
+      </flxColumn>
     </footer>
-  </gridLayout>
-</layout>
+  </flxGrid>
+</flxContainer>
